--- a/restaurante/src/main/resources/application.properties
+++ b/restaurante/src/main/resources/application.properties
@@ -1,1 +1,38 @@
-spring.application.name=restaurante
+# Base de datos H2 (para desarrollo)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console (para ver la BD en desarrollo)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Thymeleaf
+spring.thymeleaf.cache=false
+
+# Logging
+logging.level.com.proyecto.restaurante=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+# Configuración de archivos
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Servidor
+server.port=8080
+
+# Comentarios para configuración de producción:
+# Para MySQL en producción:
+# spring.datasource.url=jdbc:mysql://localhost:3306/restaurante_db?useSSL=false&serverTimezone=UTC
+# spring.datasource.username=root
+# spring.datasource.password=tu_password
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.hibernate.ddl-auto=validate
